[gd_scene load_steps=5 format=3 uid="uid://4211k16ws257"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_blhvv"]
[ext_resource type="Texture2D" uid="uid://cn0wo2ob01rp5" path="res://assets/backgrounds/dungeon.png" id="2_skytu"]
[ext_resource type="Theme" uid="uid://d1b5jw5e7ipk8" path="res://themes/text_theme.tres" id="3_xd43y"]
[ext_resource type="StyleBox" uid="uid://cjcquh0xlusj4" path="res://themes/label_bg.tres" id="4_gv5fv"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blhvv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="NewGameButton" type="Button" parent="CanvasLayer"]
offset_left = -62.0
offset_top = -57.0
offset_right = 63.0
offset_bottom = -41.0
theme = ExtResource("3_xd43y")
theme_override_styles/normal = ExtResource("4_gv5fv")
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = -63.0
offset_top = -77.0
offset_right = 63.0
offset_bottom = -61.0
theme = ExtResource("3_xd43y")
theme_override_styles/normal = ExtResource("4_gv5fv")
text = "CONTINUE "

[node name="SeedTextbox" type="TextEdit" parent="CanvasLayer"]
offset_left = -45.0
offset_top = -37.0
offset_right = 45.0
offset_bottom = -21.0
theme = ExtResource("3_xd43y")
theme_override_styles/normal = ExtResource("4_gv5fv")
placeholder_text = "     Set seed"
context_menu_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -41)
zoom = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
z_index = -1
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.187907, 0.210286)
texture = ExtResource("2_skytu")
